selecting in  the browserview now sets the imageview

--- a/photouploader/en.lproj/MainMenu.xib
+++ b/photouploader/en.lproj/MainMenu.xib
@@ -1344,7 +1344,7 @@
 					<int key="NSvFlags">256</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSButton" id="455996954">
+						<object class="NSButton" id="952310867">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{723, 12}, {96, 32}}</string>
@@ -1352,16 +1352,16 @@
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
 							<bool key="NSEnabled">YES</bool>
-							<object class="NSButtonCell" key="NSCell" id="468345578">
+							<object class="NSButtonCell" key="NSCell" id="795799201">
 								<int key="NSCellFlags">67239424</int>
 								<int key="NSCellFlags2">134217728</int>
 								<string key="NSContents">Upload</string>
-								<object class="NSFont" key="NSSupport" id="254280799">
+								<object class="NSFont" key="NSSupport" id="756020949">
 									<string key="NSName">LucidaGrande</string>
 									<double key="NSSize">13</double>
 									<int key="NSfFlags">1044</int>
 								</object>
-								<reference key="NSControlView" ref="455996954"/>
+								<reference key="NSControlView" ref="952310867"/>
 								<int key="NSButtonFlags">-2038284033</int>
 								<int key="NSButtonFlags2">129</int>
 								<string key="NSAlternateContents"/>
@@ -1370,20 +1370,20 @@
 								<int key="NSPeriodicInterval">25</int>
 							</object>
 						</object>
-						<object class="NSButton" id="255070373">
+						<object class="NSButton" id="748714596">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{819, 12}, {96, 32}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="455996954"/>
+							<reference key="NSNextKeyView" ref="952310867"/>
 							<bool key="NSEnabled">YES</bool>
-							<object class="NSButtonCell" key="NSCell" id="227627639">
+							<object class="NSButtonCell" key="NSCell" id="267938161">
 								<int key="NSCellFlags">67239424</int>
 								<int key="NSCellFlags2">134217728</int>
 								<string key="NSContents">Settings</string>
-								<reference key="NSSupport" ref="254280799"/>
-								<reference key="NSControlView" ref="255070373"/>
+								<reference key="NSSupport" ref="756020949"/>
+								<reference key="NSControlView" ref="748714596"/>
 								<int key="NSButtonFlags">-2038284033</int>
 								<int key="NSButtonFlags2">129</int>
 								<string key="NSAlternateContents"/>
@@ -1392,16 +1392,16 @@
 								<int key="NSPeriodicInterval">25</int>
 							</object>
 						</object>
-						<object class="NSSplitView" id="851694308">
+						<object class="NSSplitView" id="1069355646">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">256</int>
 							<object class="NSMutableArray" key="NSSubviews">
 								<bool key="EncodedWithXMLCoder">YES</bool>
-								<object class="IKImageView" id="1010172563">
-									<reference key="NSNextResponder" ref="851694308"/>
+								<object class="IKImageView" id="729922738">
+									<reference key="NSNextResponder" ref="1069355646"/>
 									<int key="NSvFlags">274</int>
 									<string key="NSFrameSize">{934, 319}</string>
-									<reference key="NSSuperview" ref="851694308"/>
+									<reference key="NSSuperview" ref="1069355646"/>
 									<reference key="NSWindow"/>
 									<bool key="NSViewIsLayerTreeHost">YES</bool>
 									<float key="zoomFactor">0.10562500357627869</float>
@@ -1420,7 +1420,7 @@
 									</object>
 								</object>
 								<object class="IKImageBrowserView" id="541804875">
-									<reference key="NSNextResponder" ref="851694308"/>
+									<reference key="NSNextResponder" ref="1069355646"/>
 									<int key="NSvFlags">18</int>
 									<object class="NSMutableSet" key="NSDragTypes">
 										<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1580,9 +1580,9 @@
 										</object>
 									</object>
 									<string key="NSFrame">{{0, 329}, {934, 286}}</string>
-									<reference key="NSSuperview" ref="851694308"/>
+									<reference key="NSSuperview" ref="1069355646"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView" ref="255070373"/>
+									<reference key="NSNextKeyView" ref="748714596"/>
 									<bool key="constrainsToOriginalSize">NO</bool>
 									<bool key="cellsHaveSubtitle">NO</bool>
 									<bool key="cellsHaveTitle">NO</bool>
@@ -2311,19 +2311,27 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">imageView</string>
-						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="541804875"/>
-					</object>
-					<int key="connectionID">570</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="541804875"/>
 						<reference key="destination" ref="976324537"/>
 					</object>
 					<int key="connectionID">571</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">imageView</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="729922738"/>
+					</object>
+					<int key="connectionID">572</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">imageBrowserView</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="541804875"/>
+					</object>
+					<int key="connectionID">573</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -2880,9 +2888,9 @@
 						<reference key="object" ref="439893737"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="255070373"/>
-							<reference ref="455996954"/>
-							<reference ref="851694308"/>
+							<reference ref="748714596"/>
+							<reference ref="952310867"/>
+							<reference ref="1069355646"/>
 						</object>
 						<reference key="parent" ref="972006081"/>
 					</object>
@@ -3374,51 +3382,51 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">560</int>
-						<reference key="object" ref="455996954"/>
+						<reference key="object" ref="952310867"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="468345578"/>
+							<reference ref="795799201"/>
 						</object>
 						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">561</int>
-						<reference key="object" ref="468345578"/>
-						<reference key="parent" ref="455996954"/>
+						<reference key="object" ref="795799201"/>
+						<reference key="parent" ref="952310867"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">562</int>
-						<reference key="object" ref="255070373"/>
+						<reference key="object" ref="748714596"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="227627639"/>
+							<reference ref="267938161"/>
 						</object>
 						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">563</int>
-						<reference key="object" ref="227627639"/>
-						<reference key="parent" ref="255070373"/>
+						<reference key="object" ref="267938161"/>
+						<reference key="parent" ref="748714596"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">569</int>
-						<reference key="object" ref="851694308"/>
+						<reference key="object" ref="1069355646"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="1010172563"/>
+							<reference ref="729922738"/>
 							<reference ref="541804875"/>
 						</object>
 						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">564</int>
-						<reference key="object" ref="1010172563"/>
-						<reference key="parent" ref="851694308"/>
+						<reference key="object" ref="729922738"/>
+						<reference key="parent" ref="1069355646"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">557</int>
 						<reference key="object" ref="541804875"/>
-						<reference key="parent" ref="851694308"/>
+						<reference key="parent" ref="1069355646"/>
 					</object>
 				</object>
 			</object>
@@ -3961,7 +3969,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">571</int>
+			<int key="maxID">573</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3973,11 +3981,13 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>imageBrowserView</string>
 							<string>imageView</string>
 							<string>window</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 						</object>
@@ -3986,11 +3996,16 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>imageBrowserView</string>
 							<string>imageView</string>
 							<string>window</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">imageBrowserView</string>
+								<string key="candidateClassName">id</string>
+							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">imageView</string>
 								<string key="candidateClassName">id</string>
